# FortShell

./: .gitignore  README.md  codex-last-message.txt  evaluation.txt  package-lock.json  package.json  relay-loop.ps1  resume-codex-repeat.ps1  tsconfig.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
.ai-ide/: policy.json
.claude/: settings.local.json
.relay-state/: last.txt
ai_ide/: __init__.py  agent_event_publisher.py  agent_launch_coordinator.py  agent_run_inspection_service.py  agent_run_ledger.py  agent_runtime.py  agent_state_store.py  agent_supervisor.py  agent_transport.py  agent_watch_manager.py  app.py  bootstrap.py  broker.py  broker_state_store.py  cli.py  command_guard.py  desktop_api_service.py  desktop_shell_service.py  desktop_sidecar.py  dokan_backend.py  editor_service.py  events.py  file_lock.py  filtered_fs_backend.py  internal.py  main.py  models.py  platforms.py  policy.py  policy_state_store.py  process_control_service.py  process_stop_service.py  (+45 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  protocol.rs  sidecar.rs
rust/crates/ai-ide-adapter/: Cargo.toml
rust/crates/ai-ide-adapter/src/: lib.rs  main.rs
rust/crates/ai-ide-adapter/tests/: host_adapter.rs
rust/crates/ai-ide-persistence/: Cargo.toml
rust/crates/ai-ide-persistence/src/: broker_state_store.rs  file_lock.rs  lib.rs  path_guard.rs  path_utils.rs  policy_state_store.rs  replace.rs  review_state_store.rs  workspace_index_state_store.rs
rust/crates/ai-ide-persistence/tests/: broker_state_store.rs  policy_state_store.rs  review_state_store.rs  workspace_index_state_store.rs
rust/crates/ai-ide-windows-helper/: Cargo.toml
rust/crates/ai-ide-windows-helper/src/: boundary_lock.rs  child_environment.rs  execution_guard.rs  filesystem_boundary.rs  lib.rs  low_integrity.rs  main.rs  path_alias_guard.rs  path_policy.rs  process_containment.rs  restricted_token.rs  runtime.rs
rust/crates/ai-ide-windows-helper/tests/: helper_binary.rs  helper_protocol.rs
(+334 files in other folders)
