[package]
name = "ai-ide-persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-ide-protocol = { path = "../ai-ide-protocol" }
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }
